# diskvu

./: .gitignore  CMakeLists.txt  README.md  TRANSLATE.md  resources.qrc
cmake/: uninstall.cmake.in
packaging/: PKGBUILD  io.github.dvdavd.Diskscape.desktop.in  io.github.dvdavd.Diskscape.metainfo.xml  io.github.dvdavd.Diskscape.yml
src/: breadcrumbpathbar.cpp  breadcrumbpathbar.h  colorutils.cpp  colorutils.h  filenode.h  filesystemutils.cpp  filesystemutils.h  filesystemwatchcontroller.cpp  filesystemwatchcontroller.h  iconutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_landing.cpp  mainwindow_types.h  mainwindow_utils.cpp  mainwindow_utils.h  nodepropertiesdialog.cpp  nodepropertiesdialog.h  platformthemewatcher.cpp  platformthemewatcher.h  scanner.cpp  scanner.h  scanner_bench.cpp  scanner_common.h  scanner_posix.cpp  scanner_std.cpp  scanner_win32.cpp  settingsdialog.cpp  settingsdialog.h  treemap_drawing.cpp  treemap_drawing.h  treemapsettings.cpp  treemapsettings.h  treemapwidget.cpp  treemapwidget.h  version.h.in
tests/: test_drawing.cpp  test_filenode.cpp  test_icons.cpp  test_refresh.cpp  test_scanner.cpp  test_search.cpp  test_settings.cpp
translations/: diskscape_en_US.ts  diskvu_en_US.ts
